[project]
name = "6dposedif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffrp-nvdiffrast>=0.3.3.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "onnx>=1.18.0",
    "onnxruntime-gpu>=1.22.0",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pycuda>=2025.1.1",
    "pyrender>=0.1.45",
    "tensorrt>=10.12.0.36",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "trimesh>=4.6.12",
]
